fix fonts and spacing

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -346,7 +346,9 @@
     100% { transform: scale(1)}
 }
 
-
+.contactSectionTitle {
+    font-family: "Roboto Slab";
+}
 
 .heart{
     animation: bounce; /* referring directly to the animation's @keyframe declaration */
@@ -365,6 +367,11 @@
     right: 10px;
     z-index: 10000 
 }
+@keyframes mainSlideDown {
+    0% { margin-top: 100px }
+    100% { margin-top: 300px }
+}
+
 
 
  @media only screen and (max-width: 768px){
@@ -375,14 +382,11 @@
     .nav{
         height: auto;
     }
+    
     .skillCards{
         width: 100%;
         flex-direction: column;
         align-items: center;
-        /* display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center; */
         margin-bottom: 20px;
     } 
     
@@ -400,7 +404,9 @@
         top: -100vh;
     }
 
-
+    .portfolioProjectsTitle {
+        margin-top: 100px;
+    }
 
     .portfolioProjects{
         width: 100%;
@@ -442,11 +448,17 @@
         margin-left: 0px;
         margin-right: 0px;
     }
-
+/** Contact Section **/
+    
+    .contactSectionTitle {
+        margin-top: 100px;
+    }
+    
     .form{
         width: 100%;
         height: auto;
     }
+
 
     .contactCol2{
         width:100%;
